--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 
   <body ng-controller="MainCtrl">
     <div class="row">
-      <div class="col-md-8 col-xs-offset-2">
+      <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
         <h1 class="text-center">List Device</h1>
         <table class="table table-hover">
           <thead>
@@ -24,8 +24,8 @@
               <th class="col-md-1">No.</th>
               <th class="col-md-3">Username</th>
               <th class="col-md-3">Name</th>
-              <th class="col-md-4">Address</th>
-              <th class="col-md-1 text-center">Action</th>
+              <th class="col-md-3">Address</th>
+              <th class="col-md-2 text-center">Action</th>
             </tr>
           </thead>
           <tbody>
@@ -33,14 +33,14 @@
               <td class="col-md-1">{{ device.room }}</td>
               <td class="col-md-3">{{ device.username }}</td>
               <td class="col-md-3">{{ device.name }}</td>
-              <td class="col-md-4">{{ device.address }}</td>
-              <td class="col-md-1 text-center">
+              <td class="col-md-3">{{ device.address }}</td>
+              <td class="col-md-2 text-center">
                 <form action="/data" method="POST">
                   <input name="room" value="{{ device.room }}" style="display: none">
                   <input name="username" value="{{ device.username }}" style="display: none">
                   <input name="name" value="{{ device.name }}" style="display: none">
                   <input name="address" value="{{ device.address }}" style="display: none">
-                  <input type="submit" value="View">
+                  <input type="submit" value="View" style="width: 100%">
                 </form>
               </td>
             </tr>
